RESOLVED FIXED277338
Fix CallFrame::wasmInstance on 32-bits
https://bugs.webkit.org/show_bug.cgi?id=277338
Summary Fix CallFrame::wasmInstance on 32-bits
Angelos Oikonomopoulos
Reported 2024-07-30 05:34:24 PDT
Attachments
Angelos Oikonomopoulos
Comment 1 2024-07-30 05:37:45 PDT
EWS
Comment 2 2024-07-30 13:17:09 PDT
Committed 281592@main (facd9885abd1): <https://commits.webkit.org/281592@main> Reviewed commits have been landed. Closing PR #31459 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-07-30 13:18:16 PDT
Note You need to log in before you can comment on or make changes to this bug.