Fix CallFrame::wasmInstance on 32-bits https://bugs.webkit.org/show_bug.cgi?id=277338

Reviewed by Justin Michaud.

On 32-bits, the codeblock cannot be treated as a JSValue. If we do that,
we're inadvertently using the adjacent callee as the tag, which leads
hits an assert in jsCast().

* Source/JavaScriptCore/interpreter/CallFrame.cpp:
(JSC::CallFrame::wasmInstance const):

Canonical link: https://commits.webkit.org/281592@main