Source/JavaScriptCore/interpreter/CallFrame.cpp
@@ -414,7 +414,11 @@ bool isFromJSCode(void* returnAddress)
 JSWebAssemblyInstance* CallFrame::wasmInstance() const
 {
     ASSERT(callee().isNativeCallee());
+#if USE(JSVALUE32_64)
+    return bitwise_cast<JSWebAssemblyInstance*>(this[static_cast<int>(CallFrameSlot::codeBlock)].asanUnsafePointer());
+#else
     return jsCast<JSWebAssemblyInstance*>(this[static_cast<int>(CallFrameSlot::codeBlock)].jsValue());
+#endif
 }
 #endif
 
